--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
   <div class="container">
       <!-- Logo -->
       <a class="navbar-brand" href="#">
-          <img src="/img/logo1.jpg" alt="Dukes" class="rounded-circle">
+          <img src="img/logo1.jpg" alt="Dukes" class="rounded-circle">
       </a>
       
       <!-- Botón móvil -->
