--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
   <div class="container">
       <!-- Logo -->
       <a class="navbar-brand" href="#">
-          <img src="img/logo1.jpg" alt="Dukes" class="rounded-circle">
+          <img src="./img/logo1.jpg" alt="Dukes" class="rounded-circle">
       </a>
       
       <!-- Botón móvil -->
@@ -34,7 +34,7 @@
                   <a class="nav-link" href="./pag/menu.html"><i class="fas fa-utensils me-1"></i> Menú</a>
               </li>
               <li class="nav-item">
-                  <a class="nav-link" href="/pag/promociones.html"><i class="fas fa-percent me-1"></i> Promociones</a>
+                  <a class="nav-link" href="./pag/promociones.html"><i class="fas fa-percent me-1"></i> Promociones</a>
               </li>
               <li class="nav-item dropdown">
                   <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-bs-toggle="dropdown">
@@ -48,14 +48,14 @@
                   </ul>
               </li>
               <li class="nav-item">
-                  <a class="nav-link" href="/pag/encuentranos.html"><i class="fas fa-location-dot me-1"></i>Encuentranos</a>
+                  <a class="nav-link" href="./pag/encuentranos.html"><i class="fas fa-location-dot me-1"></i>Encuentranos</a>
               </li>
           </ul>
           
           <!-- Botón de acción -->
           <div class="d-flex">
               <button class="btn btn-pedir text-white">
-                  <a class="btn btn-pedir text-white" href="/pag/pedir.html"><i class="fas me-2"></i>Pedir Ahora</a>
+                  <a class="btn btn-pedir text-white" href="./pag/pedir.html"><i class="fas me-2"></i>Pedir Ahora</a>
               </button>
           </div>
       </div>
@@ -71,15 +71,15 @@
   <!-- diapositiva1 -->
   <div class="carousel-inner ite">
     <div class="carousel-item ">
-      <img src="img/imgburguer.jpg" class="d-block w-100 h-400px object-fit-cover" alt="referencia1">
+      <img src="./img/imgburguer.jpg" class="d-block w-100 h-400px object-fit-cover" alt="referencia1">
     </div>
     <!-- diapositiva 2 -->
     <div class="carousel-item active">
-      <img src="/img/imgpizza.jpg" class="d-block w-100 h-400px object-fit-cover" alt="referencia2">
+      <img src="./img/imgpizza.jpg" class="d-block w-100 h-400px object-fit-cover" alt="referencia2">
     </div>
      <!-- diapositiva 3 -->
     <div class="carousel-item">
-      <img src="/img/imgsand.jpg" class="d-block w-100 h-400px object-fit-cover" alt="referencia3">
+      <img src="./img/imgsand.jpg" class="d-block w-100 h-400px object-fit-cover" alt="referencia3">
     </div>
   </div>
   <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide="prev">
@@ -100,7 +100,7 @@
           <!-- HACÉ TU PEDIDO -->
           <div class="col-md-4">
               <div class="action-card shadow ">
-                  <img src="/img/banner2.jpg" 
+                  <img src="./img/banner2.jpg" 
                        class="card-img-top" 
                        alt="Pedido de comida" 
                        loading="lazy">
@@ -117,7 +117,7 @@
           <!-- ENCONTRÁNOS-->
           <div class="col-md-4">
               <div class="action-card shadow">
-                  <img src="img/banner3.jpg" 
+                  <img src="./img/banner3.jpg" 
                        class="card-img-top" 
                        alt="Club deportivo" 
                        loading="lazy">
@@ -134,7 +134,7 @@
           <!-- NUESTRO MEDIO -->
           <div class="col-md-4">
               <div class="action-card shadow">
-                  <img src="img/carru1.jpg" 
+                  <img src="./img/carru1.jpg" 
                        class="card-img-top" 
                        alt="Medios de comunicación" 
                        loading="lazy">
@@ -166,7 +166,7 @@ aria-label="Contactar por WhatsApp">
         <!-- Logo y descripción -->
             <div class="col-lg-4 col-md-6 mb-4">
                 <div class="footer-logo ">
-                    <img src="img/logo1.jpg" alt="Logo dukes" class="rounded-circle" >
+                    <img src="./img/logo1.jpg" alt="Logo dukes" class="rounded-circle" >
                 </div>
                 <p>Somos una empresa comprometida con la calidad y satisfacción de nuestros clientes desde 2023.</p>
                 <div class="social-icons mt-3">
