--- a/pag/encuentranos.html
+++ b/pag/encuentranos.html
@@ -19,7 +19,7 @@
     <div class="container">
         <!-- Logo -->
         <a class="navbar-brand" href="#">
-            <img src="/img/logo1.jpg" alt="Dukes" class="rounded-circle">
+            <img src="./img/logo1.jpg" alt="Dukes" class="rounded-circle">
         </a>
         
         <!-- Botón móvil -->
@@ -34,10 +34,10 @@
                     <a class="nav-link" href="../index.html"><i></i>Inicio</a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link" href="./menu.html"><i class="fas fa-utensils me-1"></i>Menú</a>
+                    <a class="nav-link" href="../menu.html"><i class="fas fa-utensils me-1"></i>Menú</a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link" href="./promociones.html"><i class="fas fa-percent me-1"></i> Promociones</a>
+                    <a class="nav-link" href="../promociones.html"><i class="fas fa-percent me-1"></i> Promociones</a>
                 </li>
             </ul>
     </header>
