--- a/index.html
+++ b/index.html
@@ -31,10 +31,10 @@
       <div class="collapse navbar-collapse" id="navbarNav">
           <ul class="navbar-nav me-auto">
               <li class="nav-item">
-                  <a class="nav-link" href="./pag/menu.html"><i class="fas fa-utensils me-1"></i> Menú</a>
+                  <a class="nav-link" href="../pag/menu.html"><i class="fas fa-utensils me-1"></i> Menú</a>
               </li>
               <li class="nav-item">
-                  <a class="nav-link" href="./pag/promociones.html"><i class="fas fa-percent me-1"></i> Promociones</a>
+                  <a class="nav-link" href="../pag/promociones.html"><i class="fas fa-percent me-1"></i> Promociones</a>
               </li>
               <li class="nav-item dropdown">
                   <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-bs-toggle="dropdown">
@@ -48,14 +48,14 @@
                   </ul>
               </li>
               <li class="nav-item">
-                  <a class="nav-link" href="./pag/encuentranos.html"><i class="fas fa-location-dot me-1"></i>Encuentranos</a>
+                  <a class="nav-link" href="../pag/encuentranos.html"><i class="fas fa-location-dot me-1"></i>Encuentranos</a>
               </li>
           </ul>
           
           <!-- Botón de acción -->
           <div class="d-flex">
               <button class="btn btn-pedir text-white">
-                  <a class="btn btn-pedir text-white" href="./pag/pedir.html"><i class="fas me-2"></i>Pedir Ahora</a>
+                  <a class="btn btn-pedir text-white" href="../pag/pedir.html"><i class="fas me-2"></i>Pedir Ahora</a>
               </button>
           </div>
       </div>
@@ -124,7 +124,7 @@
                   <div class="card-body text-center py-4 text-white">
                       <h3 class="h4 mb-3">ENCONTRÁNOS</h3>
                       <p class="mb-4">Descubrí nuestra ubicación</p>
-                      <a href="./pag/encuentranos.html" class="btn btn-warning btn-action">
+                      <a href="../pag/encuentranos.html" class="btn btn-warning btn-action">
                           <i class="fas fa-map-marker-alt me-2"></i>Localizar
                       </a>
                   </div>
