--- a/index.html
+++ b/index.html
@@ -31,10 +31,10 @@
       <div class="collapse navbar-collapse" id="navbarNav">
           <ul class="navbar-nav me-auto">
               <li class="nav-item">
-                  <a class="nav-link" href="../pag/menu.html"><i class="fas fa-utensils me-1"></i> Menú</a>
+                  <a class="nav-link" href="./pag/menu.html"><i class="fas fa-utensils me-1"></i> Menú</a>
               </li>
               <li class="nav-item">
-                  <a class="nav-link" href="../pag/promociones.html"><i class="fas fa-percent me-1"></i> Promociones</a>
+                  <a class="nav-link" href="./pag/promociones.html"><i class="fas fa-percent me-1"></i> Promociones</a>
               </li>
               <li class="nav-item dropdown">
                   <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-bs-toggle="dropdown">
@@ -48,7 +48,7 @@
                   </ul>
               </li>
               <li class="nav-item">
-                  <a class="nav-link" href="../pag/encuentranos.html"><i class="fas fa-location-dot me-1"></i>Encuentranos</a>
+                  <a class="nav-link" href="./pag/encuentranos.html"><i class="fas fa-location-dot me-1"></i>Encuentranos</a>
               </li>
           </ul>
           
