--- a/pag/menu.html
+++ b/pag/menu.html
@@ -7,11 +7,11 @@
     <!-- cdn bootstrap -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.5/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-SgOJa3DmI69IUzQ2PVdRZhwQ+dy64/BUtbMJw1MZ8t5HZApcHrRKUc4W0kG879m7" crossorigin="anonymous">
     <!-- css -->
-    <link rel="stylesheet" href="./css/stylemenu.css">
+    <link rel="stylesheet" href="/css/stylemenu.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
         
 </head>
-    <body class="bg-dark"> 
+    <body class="bg-dark">
 
 <header>
  <!-- Navbar -->
