--- a/index.html
+++ b/index.html
@@ -3,11 +3,11 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Segunda Entrega DW</title>
+    <title>Proyecto DW</title>
     <!-- cdn bootstrap -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.5/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-SgOJa3DmI69IUzQ2PVdRZhwQ+dy64/BUtbMJw1MZ8t5HZApcHrRKUc4W0kG879m7" crossorigin="anonymous">
     <!-- css -->
-    <link rel="stylesheet" href="./css/style.css">
+    <link rel="stylesheet" href="./css/styles-unificado.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
 
 </head>
@@ -18,7 +18,8 @@
  <nav class="navbar navbar-expand-lg navbar-dark sticky-top">
   <div class="container">
       <!-- Logo -->
-      <a class="navbar-brand" href="#">
+      <a class="navbar-brand " href="index.html" >
+
           <img src="./img/logo1.jpg" alt="Dukes" class="rounded-circle">
       </a>
       
@@ -62,7 +63,7 @@
   </div>
 </nav>
 
-<div id="carouselExampleIndicators" class="carousel slide">
+<div id="carouselExampleIndicators" class="carousel slide" data-bs-ride="carousel" data-bs-interval="2000">
   <div class="carousel-indicators">
     <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="0" class="active" aria-current="true" aria-label="Slide 1"></button>
     <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="1" aria-label="Slide 2"></button>
@@ -71,7 +72,7 @@
   <!-- diapositiva1 -->
   <div class="carousel-inner ite">
     <div class="carousel-item ">
-      <img src="./img/imgburguer.jpg" class="d-block w-100 h-400px object-fit-cover" alt="referencia1">
+      <img src="./img/banner2.jpg" class="d-block w-100 h-400px object-fit-cover" alt="referencia1">
     </div>
     <!-- diapositiva 2 -->
     <div class="carousel-item active">
