--- a/pag/menu.html
+++ b/pag/menu.html
@@ -7,7 +7,7 @@
     <!-- cdn bootstrap -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.5/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-SgOJa3DmI69IUzQ2PVdRZhwQ+dy64/BUtbMJw1MZ8t5HZApcHrRKUc4W0kG879m7" crossorigin="anonymous">
     <!-- css -->
-    <link rel="stylesheet" href="../css/stylemenu.css">
+    <link rel="stylesheet" href="../css/styles-unificado.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
         
 </head>
@@ -18,7 +18,7 @@
  <nav class="navbar navbar-expand-lg navbar-dark sticky-top">
     <div class="container">
         <!-- Logo -->
-        <a class="navbar-brand" href="#">
+        <a class="navbar-brand" href="../index.html">
             <img src="../img/logo1.jpg" alt="Dukes" class="rounded-circle">
         </a>
         
